--- a/src/main/resources/templates/contratos/cadastro.html
+++ b/src/main/resources/templates/contratos/cadastro.html
@@ -38,10 +38,10 @@
                     <label >CPF/CNPJ:</label>
                     <input class="form-control" type="text" th:field="*{cpf_cnpj}" required/>
                 </div>
-                <div class="form-group mb-3">
-                    <label >Valor do contrato:</label>
-                    <input class="form-control" type="number" th:field="*{vl_contrato}" required/>
-                </div>
+<!--                <div class="form-group mb-3">-->
+<!--                    <label >Valor do contrato:</label>-->
+<!--                    <input class="form-control" type="number" th:field="*{vl_contrato}" required/>-->
+<!--                </div>-->
 
                 <button type="submit" class="btn btn-dark">Cadastrar</button>
             </form>
