--- a/src/main/resources/templates/item/cadastro.html
+++ b/src/main/resources/templates/item/cadastro.html
@@ -49,20 +49,13 @@
                 <tr th:each="contrato : ${listaContratos}">
                     <td th:text="${contrato.id}"></td>
                     <td th:text="${contrato.cpf_cnpj}"></td>
-                    <td th:text="${contrato.vl_contrato}"></td>
+                    <td th:text="${contrato.vl_contrato}" style="text-align: right;"></td>
                     <td><a class="btn btn-primary btn-sm"
                            th:href="@{/item/adicionar(id=${contrato.id})}">Cadastrar/Adicionar Duplicatas</a>
 
                 </tr>
                 </tbody>
             </table>
-        </div>
-
-
-<!--        =========================-->
-
-        <div>
-            Lista Itens - Aqui
         </div>
 
 
@@ -80,44 +73,39 @@
                 <tr th:each="itemcontrato : ${listaItens}" id="listaItens">
                     <td th:text="${itemcontrato.id}"></td>
                     <td th:text="${itemcontrato.id_duplicata}"></td>
-                    <td th:text="${#numbers.formatCurrency(itemcontrato.vl_duplicata)}"></td>
-<!--                    <td><a class="btn btn-primary btn-sm"-->
-<!--                           th:href="@{/item/adicionar(id=${itemcontrato.id})}">Cadastrar/Adicionar Duplicatas</a>-->
+                    <td th:text="${#numbers.formatCurrency(itemcontrato.vl_duplicata)}" style="text-align: right;"></td>
+
+                    <td><a class="btn btn-danger btn-sm"
+                           th:href="@{/item/excluir(item_id=${itemcontrato.id})}">X</a>
 
                 </tr>
                 </tbody>
                 <tfoot>
                 <tr>
                     <td colspan="2">Total</td>
-                    <td th:text="${#numbers.formatCurrency(#aggregates.sum(listaItens.![vl_duplicata]))}"></td>
+                    <td th:text="${#numbers.formatCurrency(#aggregates.sum(listaItens.![vl_duplicata]))}" style="text-align: right;"></td>
                 </tr>
                 </tfoot>
             </table>
         </div>
 
-
-
         <div class="card-body mt-3" th:if="${itemcontrato != null}" >
             <form method="POST" th:object="${itemcontrato}"
                   th:action="@{/item/adicionarpreenchido(contrato_id=${contrato_id})}">
 
-<!--                th:action="@{/item/adicionarpreenchido(contrato_id=${contrato_id})}">-->
-
                 <div class="form-group mb-3">
                     <label >Identificador da Duplicata:</label>
                     <input class="form-control" type="text" th:field="*{id_duplicata}" required/>
+
                 </div>
                 <div class="form-group mb-3">
                     <label >Valor da duplicata:</label>
-                    <input class="form-control" type="number" th:field="*{vl_duplicata}" required/>
+                    <input class="form-control" type="number" th:field="*{vl_duplicata}" min="0.01" step="0.01" required/>
                 </div>
-
-                //contrato_id
                 <button type="submit" class="btn btn-dark">Adicionar Duplicata</button>
-
                 </br>
                 </br>
-                <button type="submit" class="btn btn-dark">Salvar Contrato</button>
+                <a class="navbar-brand" th:href="@{/}"> <button type="button" class="btn btn-dark" >Retornar</button></a>
             </form>
 
         </div>
@@ -125,11 +113,6 @@
 
     <div layout:fragment="scripts">
         <script>
-<!--            function adicionaItem(itemcontrato) {-->
-<!--                var lista = document.getElementById('listaItens');-->
-<!--                console.log(lista);-->
-<!--                //listaItens.push(itemcontrato);-->
-<!--            }-->
         </script>
     </div>
 </div>
