--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,35 +19,65 @@
 
 <body>
 
-<div id=menu>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" th:href="@{/}">Estações e Contratos</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" th:href="@{/estacoes}" id="navbarEstacoes" role="button" data-bs-toggle="dropdown" aria-expanded="false">Estacoes</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" th:href="@{/estacoes/consultar}">Consultar Menores Rotas</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" th:href="@{/estacoes}" id="navbarContratos" role="button" data-bs-toggle="dropdown" aria-expanded="false">Contratos</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" th:href="@{/contrato/cadastrar}">Cadastrar Contrato</a></li>
-                            <li><a class="dropdown-item" th:href="@{/item/cadastrar}">Cadastrar Itens</a></li>
-                        </ul>
+<div class="container-fluid"  style="margin: 0px; padding: 0px; width: 100%">
+
+
+    <div id=top>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <a class="navbar-brand" th:href="@{/}">Estações e Contratos</a>
+<!--                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--                    <span class="navbar-toggler-icon"></span>-->
+<!--                </button>-->
+            </div>
+        </nav>
+    </div>
+
+
+    <div>
+    <div class="row">
+        <div class="col-2 bg-dark" style="height: 100vh; min-width: 160px; padding: 10px;">
+
+            <div class="dropdown bg-dark" style=" margin-left: 30px;">
+                <a class="btn btn-dark dropdown-toggle" th:href="@{/estacoes}" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                    Estacoes
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuLink">
+                    <li>
+                        <a class="dropdown-item" th:href="@{/estacoes/consultar}">Consultar Menores Rotas</a>
                     </li>
                 </ul>
             </div>
+
+            <div class="dropdown bg-dark mt-2" style=" margin-left: 30px;">
+                <a class="btn btn-dark dropdown-toggle" th:href="@{/estacoes}" role="button" id="dropdownMenuLink1" data-bs-toggle="dropdown" aria-expanded="false">
+                    Contratos
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuLink1">
+                    <li>
+                        <a class="dropdown-item" th:href="@{/contrato/cadastrar}">Cadastrar Contrato</a>
+                        <a class="dropdown-item" th:href="@{/item/cadastrar}">Cadastrar Itens</a>
+                    </li>
+                </ul>
+            </div>
+
+
         </div>
-    </nav>
+
+
+        <div class="col-10">
+            <div id="conteudo" class="container" layout:fragment="content"></div>
+        </div>
+    </div>
+    </div>
+
+
+
 </div>
 
-<div id="conteudo" class="container" layout:fragment="content"></div>
+
+
+
 
 <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
