--- a/src/main/resources/templates/contratos/cadastro.html
+++ b/src/main/resources/templates/contratos/cadastro.html
@@ -6,13 +6,12 @@
 
 <div layout:fragment="content">
 
-    <div class="alert alert-dark mt-3" th:if="${msg != null}">
-        <p th:text="${msg}"></p>
-        <div>
-            <a class="btn btn-dark btn-sm" th:href="@{/}">Sair</a>
-            <a class="btn btn-dark btn-sm" th:href="@{/item/adicionar(id=${contrato.id})}">Cadastrar/Adicionar Duplicatas</a>
-        </div>
-    </div>
+<!--    <div class="alert alert-dark mt-3" th:if="${msg != null}">-->
+<!--        <p th:text="${msg}"></p>-->
+<!--        <div>-->
+<!--            <a class="btn btn-dark btn-sm" th:href="@{/contrato/cadastrar}">Retornar</a>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <div class="card" th:if="${msg == null}">
         <div class="card text-white bg-dark p-1 text-center">
@@ -26,10 +25,10 @@
                     <label >CPF/CNPJ:</label>
                     <input class="form-control" type="text" th:field="*{cpf_cnpj}" required/>
                 </div>
-<!--                <div class="form-group mb-3">-->
-<!--                    <label >Valor do contrato:</label>-->
-<!--                    <input class="form-control" type="number" th:field="*{vl_contrato}" required/>-->
-<!--                </div>-->
+                <div class="form-group mb-3">
+                    <label >Valor do contrato:</label>
+                    <input class="form-control" type="number" th:field="*{vl_contrato}" min="0.01" step="0.01" required/>
+                </div>
 
                 <button type="submit" class="btn btn-dark">Cadastrar</button>
             </form>
