Itens comparados com total OK

--- a/src/main/resources/templates/contratos/cadastro.html
+++ b/src/main/resources/templates/contratos/cadastro.html
@@ -23,7 +23,7 @@
                   th:action="@{/contrato/cadastrar}">
                 <div class="form-group mb-3">
                     <label >CPF/CNPJ:</label>
-                    <input class="form-control" type="text" th:field="*{cpf_cnpj}" required/>
+                    <input class="form-control" type="text" th:field="*{cpf_cnpj}" autofocus required/>
                 </div>
                 <div class="form-group mb-3">
                     <label >Valor do contrato:</label>
